Fixed Product details carousel and layout, fixed header collapse, fixed home component carousel

--- a/week-5-final-project-ecommerce-app/src/app/main/components/products-detail/products-detail.component.css
+++ b/week-5-final-project-ecommerce-app/src/app/main/components/products-detail/products-detail.component.css
@@ -12,3 +12,16 @@
 .details-container {
   font-size: medium
 }
+
+.carousel-image {
+  width: 48px !important;
+  height: 48px;
+}
+
+.carousel-indicators {
+  border-radius: 5px;
+  position: relative;
+  margin: 0;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
